2.3.0
-----
1. Add 'Add to playlist' to queue items and subtoolbar (when have selection).
2. If playlist name is empty in 'Add to playlist' dialog, then select first.
3. If previousplay list name is no longer valid when open 'Add to playlist'
   dialog, then select first.
4. Set list item hover highlight for all themes.

2.2.4
-----
1. Ignore click events on 'Music sources' for first 750ms after back button is
   clicked - to try to prevent search being shown on back long/short click.
2. Don't bind 'Ctrl+C' for add favourite/podcast, this conflicts with 'Copy',
   should have been using 'Ctrl+Shift+C'
3. Use primary, not accent, colour for active navbar with light themes.
4. Attempt to handle errors thrown by decodeURIComponent()
5. Fix 'Add to playlist' not showing in subtoolbar when select items of
   multi-disc albums.
6. Refresh playlist when add items.

2.2.3
-----
1. Delay activating back-button on long press, to prevent search being
   activated.
2. Increase gap between volume controls and 'Close' button in volume dialog.
3. Increase gap between volume buttons and slider.
4. Prevent volume jumps from <= 70% to >= 90% by clicking on slider.
5. Fix player refresh loop in manage players dialog.
6. Fix blank queue when item has 'artist_ids' entry.
7. Check for 'artist_ids' being undefined (which it is for streaming) when
   fetching artist biographies.
8. Make desktop layout's bottom now-playing bar metrics consistent with and
   without stop button being shown.

2.2.2
-----
 1. Fix icon mapping for BBC Sounds when placed within Radio section.
 2. Fix flickering of artist biography and album reviews.
 3. Add a server-side config item to say whether artist should be shown before
    Band, Composer, Conductor, or after.
 4. Move 'Show all artists' option to server-side.
 5. Fix 'Show artwork' setting not beeing persisted.
 6. Don't show http icons as vue icons.
 7. Fix splitting IDs for iOS, etc.