@@ -40,7 +40,7 @@ const STD_ITEMS=[
     {
         command: ["playlists", "tracks"],
         params: ["tags:acdltK"], // "tags:IRad"] -> Will show rating, not album???
-        menu: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, ADD_TO_FAV_ACTION, RENAME_ACTION, REMOVE_DUPES_ACTION, DELETE_ACTION, SELECT_ACTION]
+        menu: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, ADD_TO_FAV_ACTION, RENAME_ACTION, REMOVE_DUPES_ACTION, DELETE_ACTION, SELECT_ACTION, BR_COPY_ACTION]
     },
     {
         command: ["playlists", "tracks"],
@@ -60,7 +60,7 @@ const STD_ITEMS=[
         menu: [PLAY_ACTION, PLAY_ALBUM_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, ADD_TO_PLAYLIST_ACTION, RATING_ACTION, SELECT_ACTION, MORE_LIB_ACTION]
     },
     {
-        menu: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, REMOVE_ACTION, SELECT_ACTION, MOVE_HERE_ACTION]
+        menu: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, REMOVE_ACTION, SELECT_ACTION, BR_COPY_ACTION, MOVE_HERE_ACTION]
     },
     {
         menu: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, SELECT_ACTION]
