@@ -5,6 +5,8 @@
 3. If previousplay list name is no longer valid when open 'Add to playlist'
    dialog, then select first.
 4. Set list item hover highlight for all themes.
+5. Add menu items to copy queue selection to playlist, and browse selection to
+   queue.
 
 2.2.4
 -----
